@@ -3,6 +3,10 @@ the top of this file before committing any changes.
 
 Al
 ------------------------------------------------------------------------------
+Sun Sep 25 12:37 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* Removed redundant code from the dircon driver.
+
 Sat Sep 26 02:07 CET 1998   Simon Weijgers  <mbit@mbit.doa.org>
 	
 	* Added a ### Dependencie line at the end of the Makefiles
